# masters-thesis

./: .gitignore  README.md  pyproject.toml
configs/: preprocess.yaml  train.yaml
configs/callbacks/: default.yaml  learning_rate_finder.yaml
configs/data/: imagecas.yaml  mnist.yaml
configs/experiment/: imagecas-debug.yaml  imagecas-topo-huber-0.000001.yaml  imagecas-topo-huber-0.000003.yaml  imagecas-topo-huber-0.00001.yaml  imagecas-topo-huber-0.00003.yaml  imagecas-topo-huber-0.0001.yaml
configs/experiment/baselines/: imagecas-baseline-huber.yaml  imagecas-baseline-mae.yaml  imagecas-baseline-mse.yaml
configs/experiment/old/: imagecas-topo-128-huber.yaml  imagecas-topo-128-mae.yaml  imagecas-topo-128-mse.yaml  imagecas-topo-32-huber.yaml  imagecas-topo-32-mae.yaml  imagecas-topo-32-mse.yaml  imagecas-topo-64-huber.yaml  imagecas-topo-64-mae.yaml  imagecas-topo-64-mse.yaml
configs/metrics/: imagecas.yaml
configs/model/: imagecas.yaml  mnist.yaml
configs/paths/: default.yaml
configs/preprocess/: default.yaml  imagecas-distance-map.yaml  imagecas.yaml
configs/trainer/: default.yaml
configs/transforms/: default.yaml  imagecas-cropad.yaml  imagecas.yaml
scripts/: download_data.py  eval.py  predict.py  preprocess.py  train.py
src/masters/core/: imagecas_module.py
src/masters/core/components/: base_module.py  losses.py  metrics.py
src/masters/core/components/malis/: malis.pyx
src/masters/data/: imagecas_datamodule.py  mnist_datamodule.py
src/masters/data/components/: paths.py  transforms.py
src/masters/utils/: __init__.py  instantiators.py  logging_utils.py  pylogger.py  rich_utils.py  tensorboard.py  utils.py
